--- a/02_web/03_bootstrap/04_border.html
+++ b/02_web/03_bootstrap/04_border.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
+  <!-- 인라인 태그한테도 줄 수 있다는 사실 ㅇㅅㅇ -->
+  <span class="border-0">hi</span>
+  <span class="border-top">This is</span>
+  <span class="border-right">display</span>
+  <span class="border-bottom">INLINE</span>
+  <span class="border-left">Border</span>
 
+  <div class="border border-primary p-3">DIV</div>
+
+  <img src="https://picsum.photos/100" alt="random-image" class="m-2 rounded-circle" >
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
