--- a/02_web/03_bootstrap/05_display.html
+++ b/02_web/03_bootstrap/05_display.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+  <div class="d-inline p-2 bg-primary text-white">d-inline</div>
+  <div class="d-inline p-2 bg-dark text-white">d-inline</div>
+
+  <span class="d-block p-2 bg-primary text-white">d-block</span>
+  <span class="d-block p-2 bg-dark text-white">d-block</span>
+
+  <!-- 특정크기에서는 나온다. 라지의 경계선에 도달하니깐 변화가 있다.  -->
+  <div class="d-lg-none bg-success">Hide this when Display is large</div>
+  <div class="d-none d-lg-block bg-warning">???</div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
