--- a/02_web/03_bootstrap/06_text.html
+++ b/02_web/03_bootstrap/06_text.html
@@ -11,6 +11,26 @@
 </head>
 
 <body>
+  <div class="container">
+
+    <!-- 텍스트 정렬 -->
+    <!-- 블록한테 text 이동을 줘야한다. 인라인은 안된다.  -->
+    <p class="text-left">Left align</p>
+    <p class="text-center">Center align</p>
+    <p class="text-right">Right align</p>
+
+    <!-- 텍스트 대소문자 -->
+    <p class="text-lowercase">LOWER CASE?</p>
+    <p class="text-uppercase">upper case?</p>
+
+    <!-- 폰트 weight & style -->
+    <p class="font-weight-bold">bold text</p>
+    <p class="font-weight-nomal">nomal text</p>
+    <p class="font-weight-light">light text</p>
+    <p class="font-italic">italic text</p>
+
+    <p class="font-italic-bold">italic and bolic text</p>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
