--- a/02_web/03_bootstrap/homework11.html
+++ b/02_web/03_bootstrap/homework11.html
@@ -8,10 +8,32 @@
   <title>bootstrap intro</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+  div {
+    borde: 1px solid black;
+  }
+  .row {
+    background-color: moccasin;
+  }
+  </style>
 </head>
 
-<body>
 
+
+<body>
+  <div class="container">
+    <section class="row bg-moccasin">
+      <article class="col-3 border border-dark text-black">
+        <p>25%</p>
+      </article>
+      <article class="col-6 border border-dark text-black">
+        <p>50%</p>
+      </article>
+      <article class="col-3 border border-dark text-black">
+        <p>25%</p>
+      </article>
+    </section>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
