--- a/02_web/03_bootstrap/08_grid.html
+++ b/02_web/03_bootstrap/08_grid.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- initial-scale=1.0 은 초기의 값이고 숫자가 올라가면 줌이 된다.  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>bootstrap intro</title>
