--- a/02_web/01_HTML/04_table.html
+++ b/02_web/01_HTML/04_table.html
@@ -15,7 +15,7 @@
       }
 
       th{
-        border: 2px dashed brown;
+        border: 2px dashed brown;  /* dashed => 점선 */
       }
     </style>
 </head>
